--- a/src/app/feeds/feed-list/feed-list.component.scss
+++ b/src/app/feeds/feed-list/feed-list.component.scss
@@ -17,16 +17,14 @@
 
 .feed-row {
   background-color: #fff;
-  border-top: 1px #ccc solid;
-  border-left: 1px #ccc solid;
-  border-right: 1px #ccc solid;
+  border-bottom: 1px #ccc solid;
   color: #333;
   font-size: 13pt;
   font-family: "Lato", serif, sans-serif;
 }
 
 .feed-row:last-child {
-  border-bottom: 1px #ccc solid;
+  border-bottom: none;
 }
 
 .author-link {
