--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="header">
   <div class="text">
-    <h1>HN Feeds</h1>
-    <h3>We hacker news!</h3>
+    <h1>{{title}}</h1>
+    <h3>{{subtitle}}</h3>
   </div>
 </div>
